add - codedeploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,17 @@ deploy:
     local_dir: deploy # before_deploy에서 생성된 디렉토리
     wait-until-deployed: true
 
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: sungwony-spring-webservice-01 #s3 버킷
+    key: spring-webservice.zip
+    bundle_type: zip
+    application: spring-webservice
+    deployment_group: spring-webservice
+    region: ap-northeast-2
+    wail-until-deployed: true
+
 # CI 실행 완료 시 메일로 알람
 notifications:
   email:
